--- a/templates/configuracao.html
+++ b/templates/configuracao.html
@@ -98,6 +98,9 @@
             <label class="form-label">Dias Restantes</label>
             <div id="dias-restantes" class="form-control bg-light">{{ empresa.dias_restantes if empresa.dias_restantes is not none else 'Carregando...' }}</div>
         </div>
+        <a href="/planos-renovacao" class="btn btn-success btn-lg w-100 mt-2" style="font-size: 1.2rem;">
+            <i class="bi bi-arrow-repeat"></i> Renovar Plano
+        </a>
     </div>
 
     <button type="submit" class="btn btn-primary">Salvar Alterações</button>
